CMBSandbox4/src/objects/Monthly_Bonus_Header__c.object
<CustomObject>
    <fields>
        <fullName>Additions__c</fullName>
        <label>Additions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Projects__c</fullName>
        <label>Completed Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End__c</fullName>
        <label>Month End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Start__c</fullName>
        <label>Month Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Billable_Hours__c</fullName>
        <formula>Billable_Hours__c  -  Reduction_RollUp_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billable_Hours__c  -  Reduction_RollUp_Hours__c</inlineHelpText>
        <label>Net Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Additions__c</fullName>
        <label>Reason for Additions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Subtractions__c</fullName>
        <label>Reason for Subtractions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_RollUp_Hours__c</fullName>
        <inlineHelpText>This totals the hours to reduce from the billable hours</inlineHelpText>
        <label>Reduction RollUp Hours</label>
        <summarizedField>Reduction_Hours__c.Hours__c</summarizedField>
        <summaryForeignKey>Reduction_Hours__c.Monthly_Bonus_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtractions__c</fullName>
        <label>Subtractions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Points_from_all_members__c</fullName>
        <label>Total Points from all members</label>
        <summarizedField>Bonus_Member__c.Total_Points__c</summarizedField>
        <summaryForeignKey>Bonus_Member__c.Monthly_Bonus_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pool_Amount_New__c</fullName>
        <formula>( Net_Billable_Hours__c * per_Billable_Hours__c) + Additions__c -
 Subtractions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pool Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Client_Complaints__c</fullName>
        <label># of Client Complaints</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Members__c</fullName>
        <label># of Members</label>
        <summaryForeignKey>Bonus_Member__c.Monthly_Bonus_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>per_Billable_Hours__c</fullName>
        <defaultValue>2</defaultValue>
        <label>$ per Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Monthly Bonus Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>per_Billable_Hours__c</columns>
        <columns>of_Members__c</columns>
        <columns>Billable_Hours__c</columns>
        <columns>Month_Start__c</columns>
        <columns>Month_End__c</columns>
        <columns>Total_Pool_Amount_New__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_Projects__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unpaid</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>per_Billable_Hours__c</columns>
        <columns>of_Members__c</columns>
        <columns>Billable_Hours__c</columns>
        <columns>Month_Start__c</columns>
        <columns>Month_End__c</columns>
        <columns>Total_Pool_Amount_New__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_Projects__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Unpaid</label>
    </listViews>
    <nameField>
        <label>Monthly Bonus Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Bonus Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>